added TableFormatter util class to reduce cognitive complexity